<resources>
    <string name="app_name">Nanny Alert</string>
    <string name="login">Login</string>
    <string name="sign_text">Already Registered? Sign in here</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="email">Email Address</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="cases">Cases</string>
    <string name="advice">Tips and advice</string>
    <string name="logout">Log out</string>
    <string name="title_activity_cases">cases</string>
    <string name="action_settings">Settings</string>
    <string name="add_case">Report case</string>

</resources>
