<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.waithera.nannyalert.Login">

    <Button
        android:id="@+id/cases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:background="@drawable/background_login"
        android:text="@string/cases"
        android:textSize="24sp" />



    <Button
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cases"
        android:layout_alignStart="@+id/cases"
        android:layout_below="@+id/cases"
        android:layout_marginTop="63dp"
        android:background="@drawable/background_login"
        android:text="@string/advice"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/background_signup"
        android:text="@string/logout" />


</RelativeLayout>
