<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.waithera.nannyalert.signUp">
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="85dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/name"
        android:textColorHint="#fff"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#fff"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_action_pass"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="#fff"
        android:inputType="textPassword"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="Sign up"
        android:textColor="#fff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/background_login"
        android:text="@string/register"
        android:textSize="24sp" />


    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/background_signup"
        android:text="@string/back" />



</RelativeLayout>
