<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"
    tools:context="com.example.waithera.nannyalert.MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="#526E7A"
        app:srcCompat="@drawable/logo3" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:layout_below="@+id/imageView5"
        android:layout_marginTop="29dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#fff"
        android:inputType="textEmailAddress"
        android:textColor="#fff"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_action_pass"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="#fff"
        android:inputType="textPassword"
        android:textColor="#fff" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/background_login"
        android:text="@string/login"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignRight="@+id/imageView5"
        android:layout_below="@+id/login"
        android:layout_marginTop="26dp"
        android:text="@string/sign_text"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</RelativeLayout>
